--- a/app/bin/main/app/MainWindow.fxml
+++ b/app/bin/main/app/MainWindow.fxml
@@ -3,22 +3,39 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
+<?import javafx.scene.media.MediaView?>
 
 
-<VBox fx:id="vbox" fx:controller="app.MainWindow" xmlns:fx="http://javafx.com/fxml" stylesheets="@MainWindow.css"
-    spacing="20" prefHeight="400" prefWidth="600" alignment="CENTER">
+<StackPane fx:id="mainWindowRoot" fx:controller="app.MainWindow" xmlns:fx="http://javafx.com/fxml" stylesheets="@MainWindow.css">
+
+<MediaView fx:id="mediaView" fitWidth="800" fitHeight="600" preserveRatio="false"/>
+
+
+<VBox fx:id="vbox" spacing="20" prefHeight="400" prefWidth="600" alignment="CENTER">
+
+    <Pane fx:id="logo" prefWidth="600" prefHeight="900" styleClass="logo-banner"/>
+
 
     <VBox alignment="CENTER" spacing="10">
-    <Button styleClass="Button" text="PLAY ▶" prefWidth="200" onAction="#onPlayClicked"/>
-    <Button styleClass="Button" text="Leaderboard" prefWidth="200"/>
+    <Button styleClass="Button" text="Play ▶" prefWidth="120" prefHeight="250" onAction="#onPlayClicked"/>
+    <Button styleClass="Button" text="Tutorial 🎓" prefWidth="180" prefHeight="250" onAction="#onTutorialClicked"/>
+    <Button styleClass="Button" text="Leaderboard 🏆" prefWidth="200" prefHeight="250" onAction="#onLeaderBoardClicked"/>
     </VBox>
 
     <Region prefHeight="50"/>
 
-    <VBox alignment="CENTER_LEFT" spacing="10">
-    <Button styleClass="Button" text="Help" prefWidth="100"/>
-    <Button styleClass="Button" onAction="#onAbout" text="About" prefWidth="100"/>
+    <HBox alignment="BOTTOM_CENTER" spacing="10" prefWidth="80">
+    <VBox alignment="BOTTOM_LEFT" spacing="10" >
+    <Button styleClass="Button2" text="Help ❔" prefWidth="90" onAction="#onHelpClicked"/>
+    <Button styleClass="Button2" onAction="#onAboutClicked" text="About 📖" prefWidth="100"/>
     </VBox>
+    <Region prefWidth="550"/> 
+    <VBox alignment="BOTTOM_RIGHT" spacing="10" >
+    <Button fx:id="muteButton" text="🔇" prefWidth="90" onAction="#onMuteClicked" styleClass="Button2"/>
+    <Button styleClass="Button2" text="Settings ⚙️" prefWidth="120" onAction="#onSettingsClicked"/>
+    </VBox>
+    </HBox>
 
 </VBox>
+</StackPane>
     
