--- a/app/bin/main/app/GameWindow.fxml
+++ b/app/bin/main/app/GameWindow.fxml
@@ -4,28 +4,31 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<HBox fx:controller="app.GameWindow" xmlns:fx="http://javafx.com/fxml"  stylesheets="@GameWindow.css"
-    spacing="20" prefHeight="400" prefWidth="600" alignment="CENTER_LEFT">
 
-    <VBox alignment="TOP_CENTER" spacing="40" prefWidth="160">
+<HBox fx:id="hbox" fx:controller="app.GameWindow" xmlns:fx="http://javafx.com/fxml"  stylesheets="@GameWindow.css"
+    spacing="40" prefHeight="600" prefWidth="800" alignment="CENTER">
+
+    <VBox alignment="TOP_CENTER" spacing="60" prefWidth="200">
         <VBox alignment="CENTER" spacing="10">
-            <Label text="HOLD" style="-fx-font-size: 18px; -fx-font-family: 'Arial;" styleClass="label-white" prefWidth="90" />
-            <Pane prefHeight="100" prefWidth="100" style="-fx-border-color: white;"/>
+            <Label text="HOLD" style="-fx-font-size: 21px; -fx-font-family: 'Arial';" styleClass="label-white" />
+            <Pane prefHeight="120" prefWidth="120" style="-fx-border-color: white; -fx-border-radius: 20;" styleClass="hold"/>
         </VBox>
-        <VBox alignment="CENTER" spacing="10">
-            <Label text="SCORE" style="-fx-font-size: 18px; -fx-font-family: 'Arial';" styleClass="label-white" prefWidth="90" />
-            <Pane prefHeight="100" prefWidth="100" style="-fx-border-color: white;"/>
+        <VBox alignment="CENTER" spacing="10" VBox.vgrow="ALWAYS">
+            <Label text="SCORE" style="-fx-font-size: 21px; -fx-font-family: 'Arial';" styleClass="label-white" prefWidth="90" />
+            <Pane prefHeight="120" prefWidth="120" style="-fx-border-color: white; -fx-border-radius: 20;" styleClass="score"/>
         </VBox>
     </VBox>
 
-    <Pane prefHeight="400" prefWidth="300" style="-fx-border-color: white; -fx-border-background-color: grey;"/>
+    <Pane fx:id="gameArea" prefHeight="550" prefWidth="300" minHeight="550" minWidth="300" maxHeight="550" maxWidth="300"/>
 
-    <VBox alignment="TOP_CENTER" spacing="40" prefWidth="160">
+<VBox alignment="TOP_CENTER" spacing="60" prefWidth="200">
         <VBox alignment="CENTER" spacing="10">
-            <Label text="NEXT" style="-fx-font-size: 18px; -fx-font-family: 'Arial';" styleClass="label-white" prefWidth="90" />
-            <Pane prefHeight="180" prefWidth="100" style="-fx-border-color: white;"/>
+            <Label text="NEXT" style="-fx-font-size: 21px; -fx-font-family: 'Arial';" styleClass="label-white" prefWidth="90" />
+            <Pane prefHeight="250" prefWidth="120" style="-fx-border-color: white; -fx-border-radius: 20;" styleClass="next"/>
         </VBox>
-        <Button text="⏸" prefWidth="60" prefHeight="60" style="-fx-font-size: 20px"/>
+        <VBox alignment="CENTER" spacing="10" VBox.vgrow="ALWAYS">
+        <Button fx:id="muteButton" text="🔇" prefWidth="90" onAction="#onMuteClicked" styleClass="Button2"/>
+        <Button text="⏸" prefWidth="50" prefHeight="50" style="-fx-font-size: 20px" styleClass="pause" onAction="#onPauseClicked"/>
     </VBox>
-
+    </VBox>
 </HBox>
