--- a/app/bin/main/app/GameWindow.fxml
+++ b/app/bin/main/app/GameWindow.fxml
@@ -3,18 +3,23 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
+<?import javafx.scene.media.MediaView?>
 
 
-<HBox fx:id="hbox" fx:controller="app.GameWindow" xmlns:fx="http://javafx.com/fxml"  stylesheets="@GameWindow.css"
-    spacing="40" prefHeight="600" prefWidth="800" alignment="CENTER">
+<StackPane fx:id="gameWindowRoot" fx:controller="app.GameWindow" xmlns:fx="http://javafx.com/fxml" stylesheets="@GameWindow.css">
+
+<MediaView fx:id="mediaView" fitWidth="800" fitHeight="600" preserveRatio="false"/>
+
+
+<HBox fx:id="hbox" spacing="40" prefHeight="600" prefWidth="800" alignment="CENTER">
 
     <VBox alignment="TOP_CENTER" spacing="60" prefWidth="200">
         <VBox alignment="CENTER" spacing="10">
-            <Label text="HOLD" style="-fx-font-size: 21px; -fx-font-family: 'Arial';" styleClass="label-white" />
+            <Label text="HOLD" style="-fx-font-size: 21px; -fx-font-family: 'Courier New';" styleClass="label-white" />
             <Pane prefHeight="120" prefWidth="120" style="-fx-border-color: white; -fx-border-radius: 20;" styleClass="hold"/>
         </VBox>
         <VBox alignment="CENTER" spacing="10" VBox.vgrow="ALWAYS">
-            <Label text="SCORE" style="-fx-font-size: 21px; -fx-font-family: 'Arial';" styleClass="label-white" prefWidth="90" />
+            <Label text="SCORE" style="-fx-font-size: 21px; -fx-font-family: 'Courier New';" styleClass="label-white" prefWidth="90" />
             <Pane prefHeight="120" prefWidth="120" style="-fx-border-color: white; -fx-border-radius: 20;" styleClass="score"/>
         </VBox>
     </VBox>
@@ -23,8 +28,8 @@
 
 <VBox alignment="TOP_CENTER" spacing="60" prefWidth="200">
         <VBox alignment="CENTER" spacing="10">
-            <Label text="NEXT" style="-fx-font-size: 21px; -fx-font-family: 'Arial';" styleClass="label-white" prefWidth="90" />
-            <Pane prefHeight="250" prefWidth="120" style="-fx-border-color: white; -fx-border-radius: 20;" styleClass="next"/>
+            <Label text="NEXT" style="-fx-font-size: 21px; -fx-font-family: 'Courier New';" styleClass="label-white" prefWidth="90" />
+            <Pane fx:id="nextPane" prefHeight="120" prefWidth="120" style="-fx-border-color: white; -fx-border-radius: 20;" styleClass="next"/>
         </VBox>
         <VBox alignment="CENTER" spacing="10" VBox.vgrow="ALWAYS">
         <Button fx:id="muteButton" text="🔇" prefWidth="90" onAction="#onMuteClicked" styleClass="Button2"/>
@@ -32,3 +37,4 @@
     </VBox>
     </VBox>
 </HBox>
+</StackPane>
