--- a/app/bin/main/app/GameWindow.css
+++ b/app/bin/main/app/GameWindow.css
@@ -1,8 +1,8 @@
 .root {
     -fx-padding: 10; /* Add a small padding around the window */
-    padding: 10;
-    -fx-background-color: black;
-}
+    padding: 10;     /* duplicated for compatibility */
+    -fx-background-color: #080705;
+} 
 .label-white {
     -fx-text-fill: white;
 
@@ -64,4 +64,16 @@
     -fx-text-fill: black;
     -fx-effect: dropshadow(gaussian, cyan, 20, 0.4, 0, 0);
     
+}
+#vbox{
+    -fx-padding: 10;
+    /* -fx-background-image: url("background.png");
+    -fx-background-repeat: no-repeat;
+    -fx-background-position: center center;
+    -fx-background-size: cover;
+    -fx-padding: 10; */
+
+}
+#gameArea{
+    -fx-background-color: black;
 }
