--- a/app/src/main/resources/app/Tutorial.css
+++ b/app/src/main/resources/app/Tutorial.css
@@ -8,4 +8,6 @@
     cyan, blue, orange, yellow, greenyellow, indigo, red);
 
     -fx-text-fill: black;
+    -fx-scale-x: 1.18;
+    -fx-scale-y: 1.18;
 }
