--- a/app/src/main/resources/app/About.fxml
+++ b/app/src/main/resources/app/About.fxml
@@ -16,18 +16,21 @@
     <Label wrapText="true"
     text="About" style="-fx-font-size: 50px; -fx-font-family: 'Courier New'; -fx-font-weight: bold; -fx-text-fill: white;"/>
     <Label wrapText="true"
-    text="The game ends when the player's screen is filled to the top with no more space for another block to spawn. Cuatros is a block puzzle game where players shift and rotate falling four-square shaped blocks to fill lines horizontally. As the lines of blocks are filled, the lines will be cleared, awarding the player points for each line cleared. As the game progresses, the blocks will fall at a higher rate and will require quicker decision making to survive. The score is calculated by how many blocks have been placed and the number of lines that have been cleared."
-    style="-fx-font-size: 15px; -fx-font-family: 'Courier New'; -fx-text-fill: white; -fx-font-weight: bold;" />
+    text="The game ends when the player's screen is filled to the top and there's no more space for another block to spawn. Cuatros is a block puzzle game where players shift and rotate falling four-square shaped blocks to fill lines horizontally. As the lines of blocks are filled, the lines will be cleared, awarding the player points for each cleared line. As the game progresses, the blocks will fall at a higher rate and will require quicker decision making to survive. The score is calculated by how many blocks have been placed and the number of lines that have been cleared."
+    style="-fx-font-size: 17px; -fx-font-family: 'Courier New'; -fx-text-fill: white; -fx-font-weight: bold;" />
     </VBox>
     <VBox alignment="CENTER" spacing="10">
-    <Label wrapText="true" text="Programmers 😎: John Tam, David Geddam, Daniel Cornelius" maxWidth="560" style="-fx-font-family: 'Courier New'; -fx-font-weight: bold; -fx-font-size: 15px; -fx-text-fill: white;"/>
-    <Label wrapText="true" text="Background images and videos 📷: Inspiration from Alibaba's Wan2.1, OpenAI's DALL-E, OpenAI's Sora" maxWidth="560" style="-fx-font-family: 'Courier New'; -fx-font-weight: bold; -fx-font-size: 15px; -fx-text-fill: white;"/>
-    <Label wrapText="true" text="Copyright Notice ©: Educational use and purposes only. All images are AI-generated-inspired, copyright-free music." maxWidth="560" style="-fx-font-family: 'Courier New'; -fx-font-weight: bold; -fx-font-size: 15px; -fx-text-fill: white;"/>
+    <Label wrapText="true" text="😎 Programmers: John Tam, David Geddam, Daniel Cornelius" maxWidth="560" style="-fx-font-family: 'Courier New'; -fx-font-weight: bold; -fx-font-size: 16px; -fx-text-fill: white;"/>
+    <Label wrapText="true" text="📷 Background images and videos: Inspiration from Alibaba's Wan2.1, OpenAI's DALL-E, OpenAI's Sora" maxWidth="560" style="-fx-font-family: 'Courier New'; -fx-font-weight: bold; -fx-font-size: 16px; -fx-text-fill: white;"/>
+    <Label wrapText="true" text="© Copyright Notice: Educational use only. All images are AI-generated-inspired, copyright-free music." maxWidth="560" style="-fx-font-family: 'Courier New'; -fx-font-weight: bold; -fx-font-size: 16px; -fx-text-fill: white;"/>
     </VBox>
     <HBox spacing="10" alignment="CENTER" style="-fx-padding: 50 10 10 10"> <!--50 moves up-->
     <Button text="BACK" styleClass="backbutton" onAction="#onBackClicked" prefWidth="100" prefHeight="40" />
     <Label text="© Project-JD" style="-fx-font-size: 25px; -fx-font-family: 'Courier New'; -fx-text-fill: white; -fx-font-weight: bold;"/>
+
     </HBox>
     </VBox>
     </HBox>
+    <Label text="🎲 Fun Fact: CUATROS means fours in spanish lol" style="-fx-font-size: 17px; -fx-font-family: 'Courier New'; -fx-text-fill: white; -fx-font-weight: bold;" StackPane.alignment="BOTTOM_CENTER" translateY="-80"/>
+    
     </StackPane>
