--- a/app/src/main/resources/app/TitleScreen.css
+++ b/app/src/main/resources/app/TitleScreen.css
@@ -6,6 +6,8 @@
 .skipbutton:hover{
     -fx-background-color: linear-gradient(to right,
     cyan, blue, orange, yellow, greenyellow, indigo, red);
+    -fx-scale-x: 1.18;
+    -fx-scale-y: 1.18;
 
     -fx-text-fill: black;
 }
