--- a/app/src/main/resources/app/LeaderBoard.fxml
+++ b/app/src/main/resources/app/LeaderBoard.fxml
@@ -11,13 +11,10 @@
 
 <HBox fx:id="hbox" spacing="40" prefHeight="600" prefWidth="800" alignment="CENTER">
 
-<VBox fx:id="vbox" spacing="10" prefHeight="400" prefWidth="600" alignment="CENTER">
-    <VBox alignment="TOP_CENTER" >
+<VBox spacing="10" prefHeight="400" prefWidth="600" alignment="CENTER">
+    <VBox fx:id="vbox" alignment="TOP_CENTER" >
         <Label wrapText="true"
             text="Leaderboards" style="-fx-font-size: 50px; -fx-font-family: 'Courier New'; -fx-font-weight: bold; -fx-text-fill: white;"/>
-        <Label wrapText="true"
-            text="Leaderboards coming soon."
-            style="-fx-font-size: 20px; -fx-font-family: 'Courier New'; -fx-text-fill: white; -fx-font-weight: bold;" />
     </VBox>
     <HBox spacing="10" alignment="CENTER" style="-fx-padding: 40 10 10 10"> <!--50 moves up-->
         <Button text="BACK" styleClass="backbutton" onAction="#onBackClicked" prefWidth="100" prefHeight="40" />
