--- a/app/src/main/resources/app/LeaderBoard.css
+++ b/app/src/main/resources/app/LeaderBoard.css
@@ -32,7 +32,7 @@
 
 }
 #hbox{
-    -fx-background-image: url("background2.png");
+    -fx-background-image: url("leaderboard.png");
     -fx-background-repeat: no-repeat;
     -fx-background-position: center center;
     -fx-background-size: cover;
