--- a/app/src/main/resources/app/About.css
+++ b/app/src/main/resources/app/About.css
@@ -33,7 +33,7 @@
 
 }
 #hbox{
-    -fx-background-image: url("background2.png");
+    -fx-background-image: url("about.png");
     -fx-background-repeat: no-repeat;
     -fx-background-position: center center;
     -fx-background-size: cover;
