--- a/app/src/main/resources/app/GameWindow.css
+++ b/app/src/main/resources/app/GameWindow.css
@@ -10,6 +10,7 @@
 .hold{
     -fx-background-color: black;
     -fx-background-radius: 20;
+    -fx-effect: dropshadow(gaussian, cyan, 20, 0.4, 0, 0);
 }
 .hold:hover{
     -fx-background-color: grey;
@@ -18,6 +19,7 @@
 .score{
     -fx-background-color: black;
     -fx-background-radius: 20;
+    -fx-effect: dropshadow(gaussian, cyan, 20, 0.4, 0, 0);
 }
 .score:hover{
     -fx-background-color: grey;
@@ -26,6 +28,7 @@
 .next{ /*Next*/
     -fx-background-color: black;
     -fx-background-radius: 20;
+    -fx-effect: dropshadow(gaussian, cyan, 20, 0.4, 0, 0);
 }
 .next:hover{
     -fx-background-color: grey;
